Style spectacle template page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <a href="#">Bittrex</a>
-    <a href="/v1">Api</a>
-    <a href="#">Websocket</a>
+    <a href="#">Home</a>
+    <a href="/v1" class="nav-link">Api</a>
+    <a href="#" class="nav-link">Websocket</a>
 </header>
